# CPPosix

./: .gitignore  CMakeLists.txt  README.md  cpposix_slides.pptx
.github/workflows/: ccpp.yml
example/: main.cpp
src/: Buffer.hpp  Concept.hpp  ConceptDetails.hpp  Dir.hpp  Env.hpp  Expected.hpp  Fd.hpp  FdFunctions.hpp  FileFd.hpp  Filesystem.hpp  Id.hpp  Pid.hpp  PipeFd.hpp  Process.hpp  SocketFd.hpp  Termios.hpp
test/: test_buffer.cpp  test_check_string_disable_macro.cpp  test_concept.cpp  test_env.cpp  test_expected.cpp  test_fd.cpp  test_filesystem.cpp  test_id.cpp  test_process.cpp  test_termios.cpp
